# BrainRoute

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
brainpicker/: __init__.py  cli.py  scorer.py  server.py  simple_yaml.py  telemetry.py
brainpicker/providers/: __init__.py  base.py  health.py  ollama.py  openai.py
brainpicker/static/: app.js  index.html  styles.css
brainroute/: __init__.py  catalog.py  classifier.py  cli.py  config.py  config_paths.py  evals.py  execution.py  policy.py  router.py  scorer.py  server.py  settings.py  simple_yaml.py  store.py  telemetry.py
brainroute/providers/: __init__.py  base.py  health.py  ollama.py  openrouter.py
brainroute/static/: app.js  index.html  styles.css
config/: evals.yaml  models.yaml  router.weights.yaml
tests/: test_catalog.py  test_classifier.py  test_evals.py  test_policy.py  test_router.py  test_server.py  test_store.py
