[project]
name = "brainroute"
version = "0.1.0"
description = "A local-first intelligent model router for choosing the best model per task."
requires-python = ">=3.11"
authors = [{ name = "BrainRoute" }]
readme = "README.md"

[project.scripts]
brainroute = "brainroute.cli:main"
brainroute-server = "brainroute.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
